--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --experimental-modules index.js",
+    "start": "node --experimental-modules index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nishant Kumar",
@@ -12,7 +12,6 @@
   "type": "module",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^2.0.21",
     "robotjs": "^0.6.0"
   }
 }
